# HDR_COZOT

./: .gitignore  CMakeLists.txt  list_photos.txt
src/: gsolve.cpp  main.cpp  reference.cpp
